switch mt/lt flavor to balanced

--- a/miryoku/miryoku_behaviors.dtsi
+++ b/miryoku/miryoku_behaviors.dtsi
@@ -8,7 +8,8 @@
       label = "u_mt";
       #binding-cells = <2>;
       tapping_term_ms = <U_TAPPING_TERM>;
-      flavor = "tap-preferred";
+      // flavor = "tap-preferred";
+      flavor = "balanced";
       bindings = <&kp>, <&kp>;
     };
     u_lt: u_lt {
@@ -16,7 +17,8 @@
       label = "u_lt";
       #binding-cells = <2>;
       tapping_term_ms = <U_TAPPING_TERM>;
-      flavor = "tap-preferred";
+      // flavor = "tap-preferred";
+      flavor = "balanced";
       bindings = <&mo>, <&kp>;
     };
   };
