--- a/.github/workflows/corne-shroom.yml
+++ b/.github/workflows/corne-shroom.yml
@@ -14,6 +14,6 @@ jobs:
       board: '["nice_nano_v2"]'
       shield: '["corne_left","corne_right"]'
       alphas: '["QWERTY"]'
-      clipboard: ["Mac"]
-      kconfig: ["CONFIG_ZMK_DISPLAY=y\\nCONFIG_ZMK_SLEEP=y"]
-      nav: ["vi"]
+      clipboard: '["Mac"]'
+      kconfig: '["CONFIG_ZMK_DISPLAY=y\\nCONFIG_ZMK_SLEEP=y"]'
+      nav: '["vi"]'
