--- a/miryoku/miryoku_behaviors.dtsi
+++ b/miryoku/miryoku_behaviors.dtsi
@@ -8,6 +8,7 @@
       label = "u_mt";
       #binding-cells = <2>;
       tapping_term_ms = <U_TAPPING_TERM>;
+      // !shroom
       // flavor = "tap-preferred";
       flavor = "balanced";
       bindings = <&kp>, <&kp>;
@@ -17,6 +18,7 @@
       label = "u_lt";
       #binding-cells = <2>;
       tapping_term_ms = <U_TAPPING_TERM>;
+      // !shroom
       // flavor = "tap-preferred";
       flavor = "balanced";
       bindings = <&mo>, <&kp>;
