--- a/miryoku/miryoku_behaviors.dtsi
+++ b/miryoku/miryoku_behaviors.dtsi
@@ -8,10 +8,12 @@
       label = "u_mt";
       #binding-cells = <2>;
       tapping_term_ms = <U_TAPPING_TERM>;
-      // !shroom
-      // flavor = "tap-preferred";
-      flavor = "balanced";
+      flavor = "tap-preferred";
       bindings = <&kp>, <&kp>;
+      // !shroom
+      retro-tap;
+      quick-tap-ms = <175>;
+      global-quick-tap;
     };
     u_lt: u_lt {
       compatible = "zmk,behavior-hold-tap";
